<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- testing version -->
    <string name="app_name">EliteDisplay</string>

    <!-- bill -->
    <string name="bill_currency_rmb">"￥"</string>
    <string name="bill_price_0">"0.00"</string>
    <string name="bill_text_total">"总计："</string>
    <string name="bill_text_payment">"收款："</string>
    <string name="bill_text_change">"找零："</string>
    <string name="bill_text_unit_price">"单价"</string>
    <string name="bill_pay_type">"请使用微信、支付宝扫码支付"</string>

    <!-- pay -->
    <string name="pay_error_asur">"商户号为空！请配置！"</string>
    <string name="pay_error_info">"支付信息出现错误！请稍后重试！"</string>
    <string name="pay_error_parameter">"支付参数错误！请稍后重试！"</string>

    <!-- setting -->
    <string name="setting">设置</string>
    <string name="setting_title">"参数配置"</string>
    <string name="setting_test_result">"串口测试："</string>
    <string name="setting_test_start">"开始测试"</string>
    <string name="setting_test_ok">"串口可用"</string>
    <string name="setting_test_fail">"没有串口读/写权限！"</string>
    <string name="setting_text_asur">"商户编号："</string>
    <string name="setting_text_time">"图片轮播时间："</string>
    <string name="setting_text_time_s">"秒"</string>
    <string name="setting_text_password">"设置密码"</string>
    <string name="setting_hint_password">"请设置6位数字密码"</string>
    <string name="setting_null_password">"密码不能为空"</string>
    <string name="setting_succ_password">"设置密码成功"</string>

    <!-- network -->
    <string name="network">网络</string>
    <string name="network_closed">未能连接到Stylistpark</string>
    <string name="network_fault">请检查您的网络连接</string>
    <string name="network_no_wifi">检测到您当前未使用Wifi，建议您在Wifi网络下观看视频</string>

    <!-- other -->
    <string name="confirm">"确定"</string>
    <string name="cancel">"取消"</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="text_switch">"切换"</string>
    <string name="text_file_error">"文件不存在或格式错误！"</string>
    <string name="text_video_error">"视频资源错误！请检查或重启！"</string>
    <string name="text_select_serial_port">"请选择串口"</string>
    <string name="text_password_input">"请输入管理员密码"</string>
    <string name="text_password_error">"密码错误！请重新输入！"</string>

</resources>